# MonTamerGens

./: .gitignore  AGENTS.md  BEANS_BRAIN.md  DETAILED_ANALYSIS.md  DEV_BIBLE.md  GEMINI.md  LICENSE.txt  LogicArchitecture.md  LumenStoryNotes.md  PixelArtStyleGuide.md  ProjectManifesto.md  ProjectTree.md  README.MD  USAGE.MD  __init__.py  art_data.py  check_mon_forge.py  cli.py  data.py  dex_entries.py  exhaustive_forge.py  forge_name.py  gen_visuals.py  generated_monsters.json  generated_monsters.jsonl  generated_monsters.txt  held_items.yaml  inspect_mods.py  json_importer.gd  kin_wounds.yaml  mon_forge.py  mongen_dexentry.txt  monster_resource.gd  monsterseed.py  package-lock.json  physical_traits.yaml  prompt_engine.py  pyproject.toml  requirements.txt  seed_types.yaml  (+8 more)
.ai_context/: 00_README.md  LogicArchitecture.md  design_bible.md  naming_conventions.md  type_canon_glossary.md  type_glossary.md  type_system_architecture.md  type_system_overview.md
.ai_context/appendices/: B_appendix.md  D_appendix.md
.ai_context/module_purposes/: 01_modules_README.md  forge_name.md
.ai_context/schemas/: 02_schemas_README.md  base_stats_schema.md  mutagen_schema.md  seed_types_schema.md  trait_schema.md  type_form_schema.md  type_systems_schema.md
.cursor/rules/: mandatory-prerequisites.mdc  montamergens-non-negotiables.mdc
.gemini/: settings.json
.github/: CHECKPOINT_2026-01-19.md
.github/instructions/: CONTEXT.instructions.md
docs/: DETAILED_ANALYSIS.md  LumenStoryNotes.gdoc  LumenStoryNotes.md  LumenStoryNotes.txt  PixelArtStyleGuide.md  ProjectManifesto.md  ProjectTree.md  README.MD  USAGE.MD  img_prompt_templates.txt  mongen_dexentry.txt  setup.py
docs/ai_context/: 00_README.md  architecture_overview.md  design_bible.md  lore_core.md  naming_conventions.md  type_canon_glossary.md  type_glossary.md
docs/ai_context/appendices/: A_appendix.md  B_appendix.md  C_appendix.md  type_system_analysis.md
docs/ai_context/module_purposes/: cli.md  data_layer.md  dex_entries.md  mon_forge.md  monster_cache.md  monsterseed.md  prompt_engine.md  reroll.md
docs/ai_context/schemas/: mutagen_schema.md  seed_types_schema.md
docs/misc/: LumenStoryNotes.md  canonical_types.txt
docs/notes/: BEANS_BRAIN.md  ProjectManifesto.md  type_system_analysis.md  type_system_overview.md
output/: last_validation.txt
src/mongens/: __init__.py  cli.py  dex_entries.py  forge_name.py  gen_visuals.py  mon_forge.py  monster_cache.py  monsterseed.py  prompt_engine.py  reroll.py  seed_data_attr.py
src/mongens/assets/: generated_monsters.json  generated_monsters.jsonl  generated_monsters.txt  generated_monsters.txt.seed.json  mongen_dexentry.txt
src/mongens/data/: #type_data.yaml  __init__.py  art_data.py  data.py  held_items.yaml  json_importer.gd  kin_wounds.yaml  major_mods.yaml  monster_resource.gd  physical_traits.yaml  seed_types.yaml  type_forms.yaml  utility_mods.yaml
src/mongens/data/enums/: silhouette.py
src/mongens/data/mutagens/: major_mods.yaml  utility_mods.yaml
src/mongens/data/naming/: type_parts.yaml
src/mongens/data/types/: #leftover.yaml  cluster_interactions.yaml  interaction_model.yaml  primary_clusters.yaml  primary_types.yaml  secondary_clusters.yaml  secondary_types.yaml  seed_types.yaml  type_affinities.yaml  type_clusters.yaml
tests/: check_mon_forge.py  exhaustive_forge.py  inspect_mods.py  smoke_forge.py  test_forge_name.py  test_formatting.py  test_generators.py  test_monforge.py  test_mutagens.py  test_regression_visuals.py  test_weighting.py
tools/: validate_yaml.py  watch_yaml.py
